# ChainYodha.Ai

./: .env.example  .env.production.example  .gitignore  LICENSE.md  README.md  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: package.json  test-server.js  tsconfig.json
backend/api/: index.ts
backend/src/: index.ts
backend/src/__tests__/: score.test.ts
backend/src/database/: data-source.ts  seed-data.ts  simple-storage.ts
backend/src/middleware/: error-handler.ts  rate-limiter.ts
backend/src/routes/: health.ts  oracle.ts  score.ts  wallet.ts
backend/src/services/: FeatureExtractor.ts  OracleService.ts  TrustScorer.ts
backend/src/utils/: logger.ts
contracts/: Cargo.toml  hardhat.config.ts  package.json
contracts/common/: ScoreUtils.sol
contracts/examples/: DeFiIntegration.sol
contracts/scripts/: deploy.ts
contracts/solidity/: TrustOracle.sol
contracts/stylus/src/: lib.rs  main.rs
contracts/test/: TrustOracle.test.ts
docs/: ACKS.md  DEMO_VIDEO_SCRIPT.md  FAQ.md  PITCH.md  PROJECT_COMPLETION_SUMMARY.md  README_HACKATHON.md  RUNBOOK.md
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/: providers.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: FeatureGrid.tsx  NetworkSwitcher.tsx  RainbowKitConnectButton.tsx  TrustScoreCard.tsx  (+1 more)
ml/: __init__.py  explain.py  feature_engineering.py  generate_synth.py  requirements.txt  test_ml.py  train.py
(+7 files in other folders)
